# piperifle

./: .gitignore  BUILD.md  CHANGES.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE.md  README.md  conanfile.py  conanprofile.ini  meson.build  requirements.in  requirements.txt  tasks.py  vcpkg.json
.trunk/: trunk.yaml
sources/: meson.build  piperifle.hpp
sources/piperifle/: config.hpp.in  node.hpp  pipe.cpp  pipe.hpp  sink.hpp  source.hpp  transform.hpp
src/: main.cpp  meson.build  piperifle.cpp  piperifle.hpp  piperifle.hpp.in
src/piperifle/: pipe.cpp  pipe.hpp  pipe_just.hpp  pipe_then.hpp  sink.cpp  source.cpp  transform.cpp
tests/: meson.build  test_piperifle_pipe.cpp  test_piperifle_pipe_construction.cpp  test_piperifle_pipe_just.cpp  test_piperifle_pipe_then.cpp
tools/amalgamate/: amalgamate.json  amalgamate.py  preamble.hpp
